--- a/src/code/WooliMammoths.Module/WooliMammoths.Module.csproj
+++ b/src/code/WooliMammoths.Module/WooliMammoths.Module.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\WooliMammoths.Module.config" />
+    <None Include="Properties\PublishProfiles\local-naveed.pubxml" />
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
