updated code to unzip files too.

--- a/src/dropbox-code/DropboxHelloWorld/App.config
+++ b/src/dropbox-code/DropboxHelloWorld/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+<appSettings>
+  <add key="DownloadRootLocation" value="C:\temp\"/>
+  <add key="DropboxFolderPrefix" value="dropbox"/>
+  <add key="DropboxFolderPostfix" value="yyyyMMMMddhhmmss"/>
+  <add key="DropboxSharedUrl" value="https://www.dropbox.com/sh/vs5dybevdxvkqk8/AAAkwhfKdC-Kv2GA79zfYP4_a?dl=1"/>
+</appSettings>
 </configuration>
