--- a/src/dropbox-code/DropboxHelloWorld/DropboxHelloWorld.csproj
+++ b/src/dropbox-code/DropboxHelloWorld/DropboxHelloWorld.csproj
@@ -42,7 +42,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
