--- a/src/Feature/Dropbox/code/Sitecore.DataExchange.Providers.Dropbox/Sitecore.DataExchange.Providers.Dropbox.csproj
+++ b/src/Feature/Dropbox/code/Sitecore.DataExchange.Providers.Dropbox/Sitecore.DataExchange.Providers.Dropbox.csproj
@@ -30,23 +30,28 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Sitecore.DataExchange">
-      <HintPath>..\lib\Sitecore.DataExchange.dll</HintPath>
+    <Reference Include="Sitecore.DataExchange, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\packages\libs\Sitecore.DataExchange.dll</HintPath>
     </Reference>
-    <Reference Include="Sitecore.DataExchange.DataAccess">
-      <HintPath>..\lib\Sitecore.DataExchange.DataAccess.dll</HintPath>
+    <Reference Include="Sitecore.DataExchange.DataAccess, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\packages\libs\Sitecore.DataExchange.DataAccess.dll</HintPath>
     </Reference>
-    <Reference Include="Sitecore.DataExchange.Local">
-      <HintPath>..\lib\Sitecore.DataExchange.Local.dll</HintPath>
+    <Reference Include="Sitecore.DataExchange.Local, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\packages\libs\Sitecore.DataExchange.Local.dll</HintPath>
     </Reference>
-    <Reference Include="Sitecore.DataExchange.Providers.Sc">
-      <HintPath>..\lib\Sitecore.DataExchange.Providers.Sc.dll</HintPath>
+    <Reference Include="Sitecore.DataExchange.Providers.Sc, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\packages\libs\Sitecore.DataExchange.Providers.Sc.dll</HintPath>
     </Reference>
-    <Reference Include="Sitecore.DataExchange.Providers.Sc.Local">
-      <HintPath>..\lib\Sitecore.DataExchange.Providers.Sc.Local.dll</HintPath>
+    <Reference Include="Sitecore.DataExchange.Providers.Sc.Local, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\packages\libs\Sitecore.DataExchange.Providers.Sc.Local.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.Kernel, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Sitecore.Kernel.NoReferences.8.2.161221\lib\NET452\Sitecore.Kernel.dll</HintPath>
+      <HintPath>..\..\..\..\..\packages\Sitecore.Kernel.NoReferences.8.2.161221\lib\NET452\Sitecore.Kernel.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Sitecore.Services.Core">
