--- a/src/Feature/Dropbox/code/Sitecore.DataExchange.Providers.Dropbox/packages.config
+++ b/src/Feature/Dropbox/code/Sitecore.DataExchange.Providers.Dropbox/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.OData.Edm" version="6.15.0" targetFramework="net452" />
   <package id="Sitecore.Kernel.NoReferences" version="8.2.161221" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Services.Core" version="8.2.161115" targetFramework="net452" developmentDependency="true" />
 </packages>
