last fix---no more code changes.

--- a/src/Project/WooliMammoth/code/Sitecore.WooliMammoth.Demo/Sitecore.WooliMammoth.Demo.csproj
+++ b/src/Project/WooliMammoth/code/Sitecore.WooliMammoth.Demo/Sitecore.WooliMammoth.Demo.csproj
@@ -106,6 +106,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+    <Folder Include="sitecore\shell\themes\standard\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
